[tool.poetry]
name = "tap-sqlalchemy"
version = "0.0.1"
description = "`tap-sqlalchemy` is a Singer tap for SQLAlchemy, built with the Meltano SDK for Singer Taps."
authors = ["AJ Steers"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.10,>=3.6.1"

# Uncomment just one of the following sdk declarations.
# Note the prerelease SQLStream support is tracked here: https://gitlab.com/meltano/sdk/-/merge_requests/44

singer-sdk = { git = "https://gitlab.com/meltano/sdk.git", branch = "74-database-type-streams" }
# singer-sdk = { path = "../sdk", develop = true }
# singer-sdk = "^0.3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-sqlalchemy = 'tap_sqlalchemy.tap:TapSQLAlchemy.cli'
